tests/e2e/negative/n0008_duplicate_declaration.cryo
// @test: duplicate_declaration
// @expect: compile_fail
// @mode: raw
// @description: Duplicate variable declaration should fail
// @tags: variables, errors

namespace NegDupDecl;

function main() -> int {
    const x: int = 5;
    const x: int = 10;
    return 0;
}
